# persistent_tree_anisodiff

./: .gitignore  CITATION.cff  LICENSE  README.md  tree_dist.ipynb
PixHomology/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.py
PixHomology/pixhomology/: __init__.py  pixhom.c  pixhom.h  pixhom.py
PixHomology/pixhomology/exp/: __init__.py  graphom.c  graphom.h  graphom.py
data/: create_dataset.py  create_mri_dataset.py
peronamalik/: main.cpp  main_mod.cpp  main_mod_mri.cpp  pm  run.sh  run_mri.sh
scripts/python/: compare.py  compare_best_distances.py  compare_distances.py  compare_exp.py  compare_mri_01.py  compare_mri_02.py  compare_mri_03.py  compare_mri_best_distances_01.py  compare_mri_best_distances_02.py  compare_mri_best_distances_03.py  compare_mri_distances_01.py  compare_mri_distances_02.py  compare_mri_distances_03.py  compute_best_tree_distance.py  compute_tree_distance.py  process_image.py  process_image_exp.py
scripts/slurm/: compute_best_mri_tree_distances_01.slurm  compute_best_mri_tree_distances_02.slurm  compute_best_mri_tree_distances_03.slurm  compute_best_tree_distances.slurm  compute_mri_tree_distances_01.slurm  compute_mri_tree_distances_02.slurm  compute_mri_tree_distances_03.slurm  compute_tree_distances.slurm  process_images.slurm  process_images_exp.slurm  process_mri_images_01.slurm  process_mri_images_02.slurm  process_mri_images_03.slurm
src/: anisodiff.py  anisodiff_exp.py  cirr.py  label.py  metrics.py  topotree.py  topotree_patch.py  utils.py
